# EDGE-OS

./: README.md  pyproject.toml
API giudes/: ATLAS_API_GUIDE.md  EDGE_AGENT_BOOTSTRAP_PLAN.md  EDGE_AGENT_INTEGRATION.md
camera_detection_system/: camera_test.py  main.py  test_phase1.py  test_phase2.py
camera_detection_system/config/: system_config.json  test_config.json
camera_detection_system/src/: __init__.py
camera_detection_system/src/components/: __init__.py  camera_manager.py  coordinate_calculator.py  coordinate_processor.py  edge_agent.py  person_detector.py  telemetry_client.py
camera_detection_system/src/models/: __init__.py  config.py  telemetry.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  style-guide.md  systemPatterns.md  tasks.md  techContext.md
memory-bank/creative/: creative-algorithm-coordinate-calculation.md  creative-architecture-camera-system.md  creative-data-model-telemetry.md
provisioning/: setup_pi.sh
src/atlas_edge/: __init__.py  client.py  config.py  edge_stub.py  registry.py  telemetry.py
